frame/support/test/tests/construct_runtime_ui/missing_where_block.stderr
error: expected `where`
 --> $DIR/missing_where_block.rs:4:19
  |
4 |     pub enum Runtime {}
  |                      ^^
