frame/support/test/tests/construct_runtime_ui/missing_where_block.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime {}
}

fn main() {}
